--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="clickableRoundSize">25dp</dimen>
     <dimen name="roundSize">25dp</dimen>
+    <dimen name="textSize">20dp</dimen>
 </resources>
