--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,19 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="horizontal"
     tools:context="com.larypipot.cimi.imagemap.MainActivity">
 
-    <com.larypipot.cimi.imagemap.ImageMapView
+
+    <com.larypipot.cimi.imagemap.View.NoteImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/imageMapView"
-        app:backgroundDrawable="@drawable/bab"
+        android:visibility="invisible"
+        app:backgroundDrawable="@drawable/anatomical_chart_back"
         app:unselectedDrawable="@drawable/anatomy_dot_unselected"
         app:selectedpDrawable="@drawable/anatomy_dot_selected" />
 
+    <com.larypipot.cimi.imagemap.View.NoteImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/imageMapViewFront"
+        app:backgroundDrawable="@drawable/anatomical_chart_front"
+        app:unselectedDrawable="@drawable/anatomy_dot_unselected"
+        app:selectedpDrawable="@drawable/anatomy_dot_selected" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageViewRotate"
+        android:src="@drawable/ic_rotate"
+        android:tint="#71ad77"
+        android:layout_alignTop="@+id/imageMapView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="40dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp" />
 </RelativeLayout>
