--- a/app/src/main/res/layout/activity_operation.xml
+++ b/app/src/main/res/layout/activity_operation.xml
@@ -19,7 +19,7 @@
     android:layout_height="wrap_content" />
 
 
-    <com.larypipot.cimi.imagemap.View.ImageMapView
+    <com.larypipot.cimi.zonemap.View.ImageMapView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/imageMapViewFront"
