--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="com.larypipot.cimi.imagemap.ImageMapView">
-        <attr name="backgroundDrawable" format="reference" />
-        <attr name="selectedpDrawable" format="reference" />
-        <attr name="unselectedDrawable" format="reference" />
+    <declare-styleable name="com.larypipot.cimi.imagemap.ImageMapViewe">
+        <attr name="backgroundDraweable" format="reference" />
+        <attr name="selectedpDrawaeble" format="reference" />
+        <attr name="unselectedDraewable" format="reference" />
     </declare-styleable>
 </resources>
