--- a/app/src/main/res/drawable/anatomy_dot_unselected.xml
+++ b/app/src/main/res/drawable/anatomy_dot_unselected.xml
@@ -5,8 +5,8 @@
         android:width="@dimen/clickableRoundSize"
         android:height="@dimen/clickableRoundSize" />
 
-    <solid android:color="#05000000" />
+    <solid android:color="@color/in" />
     <stroke
-        android:color="@color/colorAccent"
+        android:color="@color/out"
         android:width="3dp" />
 </shape>
