--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#DC911B</color>
     <color name="yellowCoach">#DC911B</color>
+    <color name="red">#a51123</color>
     <color name="in">#7af188b7</color>
     <color name="out">#4582e5</color>
 </resources>
