--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,10 @@
         android:src="@drawable/anatomical_chart_back" />
 
     <com.zechassault.zonemap.View.NoteImageView
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/imageMapViewFront"
@@ -26,11 +30,10 @@
         android:layout_height="50dp"
         android:id="@+id/imageViewRotate"
         android:src="@drawable/rotation"
-        android:layout_alignTop="@+id/imageMapView"
         android:background="@drawable/bg_button_light"
+        android:layout_marginLeft="76dp"
+        android:layout_marginStart="76dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="140dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="40dp" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
